--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,7 @@
             "src": "/icon-512.png",
             "sizes": "512x512",
             "type": "image/png"
-            "purpose": maskable
+            "purpose": "maskable"
         }
     ]
 }
