another luh debug

--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,7 @@
         {
             "src": "/icon-512.png",
             "sizes": "512x512",
-            "type": "image/png"
+            "type": "image/png",
             "purpose": "maskable"
         }
     ]
