--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
         {
             "src": "/icon-192.png",
             "sizes": "192x192",
-            "type": "image/png",
+            "type": "image/png"
         },
         {
             "src": "/icon-512.png",
