--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "name": "FRC Qrscout 4063 2024",
     "short_name": "QRScout 4063",
     "start_url": "/",
-    "display": "standalone",
+    "display": "fullscreen",
     "background_color": "#ff0000",
     "theme_color": "#ffffff",
     "icons": [
